--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url("/assets/bg1.jpg");
+    background-image: url("/Techplement/assets/bg1.jpg");
     background-color: #cccccc;
    }
 *{
